--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -83,9 +83,8 @@
   border: solid 1px $color-gray-86;
   border-radius: 3px;
   background: none;
-  margin: 0;
+  margin: 0 -36px 0 0;
   padding: 8px 10px;
-  margin-right: -36px;
   transition: border-color 0.35s;
 
   span {
@@ -292,6 +291,11 @@
     padding: 0;
     margin: 0 18px 0 0;
 
+    &::-moz-focus-inner {
+      border: 0;
+      padding: 0;
+      margin-top: -1px;
+    }
     span {
       display: inline-block;
     }
